fix firefox overflow error

--- a/linkfloyd/sitestatic/css/style.less
+++ b/linkfloyd/sitestatic/css/style.less
@@ -370,6 +370,7 @@ div.two-column {
     }
     > div.content {
         width: 705px;
+        overflow: visible;
     }
 }
 div#content {
@@ -573,6 +574,7 @@ div.attachment {
         float: right;
         margin: 0 0 0 10px;
         padding: 0;
+        overflow: auto;
         img {
             width: 120px;
             height: 70px;        
